grafana smtp enable

--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:vHMpfhQY,iv:DxcZWmtMdu+cytgT0PjOmudMtAGIOJt8zmgafqUGP2A=,tag:RbzIR2mHpjornfVWi9vZmg==,type:str]
-ansible_user: ENC[AES256_GCM,data:9+nVrIgm,iv:T4OWDTTywrcBULtTXx3/SYiUlJjs83iEMs3GmPi1Vrw=,tag:wXrbf15G/CsihGd4tPYvEA==,type:str]
+kind: ENC[AES256_GCM,data:nKnX0S4G,iv:YO7jNl54NsH3uHC8lQBzOieImb7Gewbu04UCNjtfbv4=,tag:DgWeTD8ACWu5lLI6/MKIWg==,type:str]
+ansible_user: ENC[AES256_GCM,data:ta47CeeH,iv:qU+nlAwxUaesbRCxiitiUYk3veD0Gwj+/jKXi/KIQbI=,tag:tR+Ysu8vs8RJerbzdq70ag==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiMEt3WTBhMlViOGhOb0dI
-            d28wSllKZ3cyUEd0Vk0rZ3FCWnVLbzB1ZkYwClM3TkNLa3RTdVF0NFdvYnVUNUpy
-            dGw4WlAxZ1ZzRTh2V3ZXbWl6QXcvVDAKLS0tIG1zOWx2K1JubmNNN21xcTNvZlVQ
-            QjhhUmJNWmlvclUyTUNCY2RlMytOMU0K+tuiA7dobJ8N12dWbqbTb0ngvybfYNoM
-            AtX7L/KtQOJR2f54DWDPRqtVyFuAQa6GJudzxtzUV1ZSxYzNhTPsIQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWdFdyaUorQXhaT3I3SVJk
+            Z0cvOE1EMGxPaWtJNkRQbjM1REZKUjBtYkVJCnlBeWpoTHNpd3J1b1NYeW1FV0Jy
+            MTZ3ZjNWdHZTRE93SkN0N3UyNFp1T1kKLS0tIGkxeWc3UlVVcUNzTzRXd1lHcDVG
+            dE5TaThmck9ENG9HT1ZqcW1QWWNTU1EKiDmK8mFZyZwWpJb6QCOcHNGxz/kPAlAQ
+            1BSxBXZrS22zrCc65mCzb0gddjSnpy9tK5KIyxI/TS2Vbj8zjkKMoQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:u7oVnX+Pp+FvZdgHlVHwQ/VAg8enkxVXR4SAxqZjhlc20kZdbZmO84cNMgpVeGbdp42y91MJBKVSQgP3g7zb4qKk5A4kljZ+CHOMIYulRIZdhlxJyBaYl7qmN7A6YQTki59DSpAami9F82OwpcVjcN3wzclKaJhCUm7ekC3sqJw=,iv:MK4lW2+8ABhkScl2WmuM2Euy65X4Yz55C5+hBX729CY=,tag:fhEBQDEEBBAcI2S61VCT6g==,type:str]
+    lastmodified: "2023-03-03T00:57:56Z"
+    mac: ENC[AES256_GCM,data:JmktEzXRfpu77Y2y5UydHR2rQDqwmN/uHK5Ytd6CsHCar8Mw+KcXVHzcs87Yk9OBomLLA9my3FNHfdamgOPe/N1jlpfGiVULIYdZmcTPOiY6aDRtqUDOrHgXN8UQkus0xbh/qhlOxoWvnrB9vFlf6XFz3gSA1r0H8h0vK04NqeY=,iv:8qspjulQUr8wKU2sAvGsWNi57dkcIHE6GT+Q1aIAbek=,tag:0XB63mlx3+21p4T8mnjCgQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
