--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:7mgVOoEV,iv:KgPimMWVOj5XQdAi46bn+p2fccmdRySyOxxoeKinOfU=,tag:1uqCo+1+yHJp13R7zZkZ/A==,type:str]
-ansible_user: ENC[AES256_GCM,data:WvK4CsCi,iv:rJgyjkSNuFRfCmFj4re8HvXjH7nwfenW98VzR0XYTFE=,tag:IwwS6DTGejh8uVzEhzqf9Q==,type:str]
+kind: ENC[AES256_GCM,data:uRktn0uC,iv:hKsTxryZ8xe736LQ54YhgIQndsoHFA9gO/cTn0VVlCw=,tag:I/2wSyrTvk4wPKSWcomfcQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:OyF14vX0,iv:8+lJFOIBn22tPZBVuJnfRCMYgkJL1FmJmb7IdDKom20=,tag:kADcz6bVbU+MGAU/fDoCUA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBreTZXZW1XSXRGTlBQclE3
-            WTQzMXhmcTJiWngwNUtMVld2UWRmYmlMaVhZCmpRMUk3OGprbFFTZWdTYjRsS2NV
-            clc1UC9XSVhFb1BTUVRBRkRDbHR1bFUKLS0tIG5mcWtDbTRpYTNuYnZNRVdPTlhh
-            aUFjQS9nc3F1RkdtQmk2V0lQRWdJcWMK9hdaG+H5GfRSBvXLW6/gjMj6f43VSFZJ
-            hrfV+OVOxI3BFL/jlbnpR3XAWLPJ7dJxPmicYLpNYh8fPvo0gwMEgQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0MUhMMjB2dm5vMWV4VjZK
+            NFZSZ3NrWlNCVmptcnF3bTBYQWovQ2xvWlV3CmlPbEhsVWYvbzcxOUJOQzFWanJJ
+            NlBZSHhPZmJrVnFlNFZ5N0NyRWlYWU0KLS0tIFVQdkN2UlQyTzlSVEhSRXlSYndK
+            d2hLd21yZ1lSODlVUnE4R0dFR1R4M0UKeENttWunqHNvUa1URIKfEuu7oDE1JXXg
+            gvAC6fwQp/Zr5T53UUvaHJqR6O51tf0TrnlhWtJ3LAnIWmPjiE0CmQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:UpkmlLlLO/cYVFsL+xBAtef6THNNdkOIApraVXeEKlFrsyBJlqnJau6c4amzW4uuSSZXZHx13k4dm+rBly33jG91FvMYrUV+QIkyVBNHditQ5tpuhrYBiwCF168VhTNurZNhNWDjcbsRdycBFvkUPoZCJfTCL+Lu0WY9RUzv90o=,iv:r2R7Wh0OROeS/Q5c6nAke38q4Ytp7yz44sD5kVTOadE=,tag:UcGpZttzPX2NaIt5BMQhVQ==,type:str]
+    lastmodified: "2023-03-03T00:57:56Z"
+    mac: ENC[AES256_GCM,data:GZwv1q0Ljwvh0RWTR1yCGyohuZjC7T/OlE/M/ePD4XbZSTrYzIdHQudjmuNO9Yg+3RH7VHQBdZWhtHktRQqKeYrbMO/KMmUvBH5eUHqottRQ+pvoz4/nFT4sp7mIUcGaGxSh5a7ZV9i5kK3eR2+drj4fpycrpVN8q6ERrnWL5PU=,iv:pv8cCszHfV3j3OR/LQoAw2veV5Mio5TDwuutZoFPWO0=,tag:7+vZ1O7tLhbbNeWoxXC3ng==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
