--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ajDbHRYu,iv:iSgCKqcSt2oWlJ7V+OKatiRhqQmMcTBWCKJOA7NezhE=,tag:ubrEK4klcTvEgEUHF2sXNg==,type:str]
-ansible_user: ENC[AES256_GCM,data:KZucQ8Dj,iv:BN7croNKsoMuCBfOJVG7gZzSBfMUEnxMvaufqfjhj1M=,tag:q6I0Fl4HoFoYjPbaeE9+AA==,type:str]
+kind: ENC[AES256_GCM,data:UV/rDRAH,iv:7TLA2gsj+DwJe8xb4GnmQAbZNd9HRBgo1Ch2wem7kSg=,tag:OcbcWTiuDwEcZsn3fBHiMw==,type:str]
+ansible_user: ENC[AES256_GCM,data:l/4eI7t8,iv:Fxk2BFEFI8UhfsZJ3MR8CthOjuaNVgAR9DSW6Wp79SY=,tag:rOGi0JNthHcczN0Hfhha1w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4WnJNWE9tbXZLU0VwMGM3
-            NHhuWW1vemZxTEZUV3NSSEVYaUpLZHFwQlRFCjBKbHRGcmRMVFI2Z2kydXRNU2Qw
-            MG5pK0JlNTV0SmxnNVNJZDc4a3ZsZXMKLS0tIG1WS1V1WmI2TkZVVE1YUmw1ckJS
-            TnlFSVlkTUxkWWxWcWs5MTkxTXZHUjgKviWOA/eVfXI2Fy2yFgsSFt7oYKxwOW9+
-            5XreatHPOM8plN0uPgdFSfUx0QVjw77x9coFheUIbqXqb0kfQB39Fw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6YUQ1TVNNMXJQbnF5MzJs
+            QU12NkI0VmxMbDZRY1czbjBXM3BiMjZaNHhrCmJNcjRkbXFzd2NQN0UwT1Rqella
+            UWl1MnluVjFXRkRMdFBwYXh5NDZMQTQKLS0tIEtSaHBMcWE2aUtTSzdQZmlZd1Qx
+            eXd1OTlMVFBoc3Y3TlRJc0tOakdRYmcKSUJH34Kq2Cmr1zCzJlzRGI+2gKd+vHTj
+            CXCWsRMc9xh1zhm2wwJt3wjENTvbxlxLSCQvZhWhbq/S4JbGwTqkBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:V+EnksJY8P6SQOxjPFeptV21WBOV9paw65JNjPOarFsNmH58KstdDHq69bgW1OdVvdcQqUq0fyI5PIbg66rOq/+kZP+1Y8L6OIRPVviEcqsXiOgkg0S/QB8Gv16p13tjwmnpxA20trSuvaY8GRgq6COrHuWJx/CWaQQ/dHU70T0=,iv:tYJ2+H+zbhsV0oigDw4wdGLA2uqEINpazqclEHnOtok=,tag:hu1Bl4TY9V5h5ILcTOIa/w==,type:str]
+    lastmodified: "2023-03-03T00:57:56Z"
+    mac: ENC[AES256_GCM,data:IXMMw7PIjEKlIQPU4NVDDgvTA0V8SQv4/lZuK1f/OIrfwc1bqsKSKkny8kH34fNobqu4kEEGO4Lm5FP5IlcstpRoY69lL8oBKJqyIDcTeqrz6qVlLUGxDXWZXXQyhXY6+TxHlbdeQ23yJn9J6K54sl/MZkyAEpuNyt8ydvjUuX0=,iv:uNfTbpk09HvqrKhqHHmurJ6bdN6Qj3LG3mVFgXAXRas=,tag:FcIP+go9ZbBZRyGR7VMkIQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
