--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:lGiPwOLj,iv:XR4sVXBcAzqNs980hPUcXcGe9c3RqaPpGN/FTK+DmeU=,tag:/0MagNV7xIsR1D7G4g05sw==,type:str]
-ansible_user: ENC[AES256_GCM,data:0cXg4vDl,iv:nGNJAYbMnmYs8CQgv1L2EyCUO8sQpESbvT2km6jyads=,tag:prvSVukakIJPVljBKXoNFQ==,type:str]
+kind: ENC[AES256_GCM,data:Bs5r4kp/,iv:MDXNx0W4hJ3QWRGMydDwklnlbVPNE1kgJ3KfogvqQX8=,tag:+ynfgFA9e91DGph2cMNM7w==,type:str]
+ansible_user: ENC[AES256_GCM,data:9Ec+5qMg,iv:A6DWJkYCQmp4zIMgSVUmsK4NA+iTQ75R8rVtrDaxOp8=,tag:rHqUyawUHK4//65qtd4cMw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlVjdoSDdscjQzUWtkUFJT
-            YURFWnBJTW53clB1cVZ6WGhrOUVEOXpLaUZFCkpqL1Vidk1acXR2M2lEVko4RkN0
-            dE5UTnJSQWJvdDBTTDJhRi9zR2pWMEUKLS0tICtLamx2VytReHY1anhib0w1Y1o1
-            NVh4ZmhVUTVDZTByWlJwUmVzdS9QaEkKwnGnuFQuwJTWoeSH/V1TdQUGESJgJaiI
-            s1uL6w2ev9J6VQ4V7UOx4jMEg1pc8DvIr4d5UFX6UIk5ZzmVrn/tGg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1cEZkRUFnZ0hqMFJybmo2
+            UkEyL3Z3cnh3dmdOR05HVXd2UFBUc1lwUXhVCjZ6UTgvL3BQaFZIK1I4MmxtSmFU
+            RjVKbmlxRzlZaDR1YUhTT1hUSG1KMDQKLS0tIFJBaE5KK1lLWFIvdXVZTUhrVnRa
+            K2NnTlFCcDJXOVRiSklGUUZKUVA4MHMKOlcQZrn62E6d04RmquKWDOZUqN02CM5Q
+            Y49m6g1eBWEWENym8J/LpH39bpK7rcSEw3KJSbfHhEmJ5ItroGFemw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:mwNFNVd5eCOcBajQG0ZjSFK5MJmg1A2NjUxd886/8JCr+6MlY4ad1ovTghCbn3Oom6PN42hZSb8EnN5fKEwdPDR1SKH1MOOWQ19XPsCgag/xuvv70gJt6VXntgLhDYoF5YmM5mgRjVX8NNKOECfEbJPaAUdbNScSrWtKraaSsCo=,iv:eNh2ovnMRG8+gPgQpzRXVmg2TiiIBjmC8sQZ/ekaS5U=,tag:eGIKLuA3EBLG/Z1KBciMkA==,type:str]
+    lastmodified: "2023-03-03T00:57:56Z"
+    mac: ENC[AES256_GCM,data:Gl22VezE0Y0sEDJXKBs4sicTXf2dfbvlxRExCnnCfPdhXVyWa16zBgfmhaK1X+CYSPSZfYkQ4zGMkTaqILet60x8A7N8cSGnDG5PvEGvv7WODaXZiG45eX1u89fWMezdNEaYZZjlk1U/VweoQwS7V5ymlqrQiUPzQ/CIK6vUKcg=,iv:ddQqcXHHKplX5N0iMoCDiRUAjN5fZQgOdWsEJws0nNo=,tag:a2S5QF/ONIh+4LTEx6TIHA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
