--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data://OEkmql,iv:4N25QcUnXy5MOHA3gdchtV1NlsDl/eeToo3+04eoo8c=,tag:hU7WARhsHZ+0GFjOM06U0A==,type:str]
-ansible_user: ENC[AES256_GCM,data:5gXjQy13,iv:v+nyNaCpjGXh6GXpWCQGnvM7IpR2/Qmmq0R0y097gFY=,tag:vQCh8NfPKfXrbRIjsvi6ig==,type:str]
+kind: ENC[AES256_GCM,data:7AUJY/E/,iv:Lq66LN6f0MpNZanj+cvcB8DdT5X/sr0CgFgGEQ8hKJw=,tag:fxlyDfQp60lLjuo8T1WhFQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:bL+GmDqS,iv:YR8PnvqeMq98z0ZMADvvcdYqoBVJl3ry3eywqBx5tGk=,tag:XuJ9QLt+8glP2f0wzY0aUA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXYzM5Z3V5Wmc0blJhdWJi
-            VHBGZjJ3OENnWFkzSUU5RlNSSTRqZzQwcVRBCmVVV2V0WGpPWTJ1NjM5Z3UwaVlw
-            U1Jxck9DcmhadE5vaSs4WkRRNVlPeDgKLS0tIGIzMWw5ZUhLQm91aytURFZDV2NB
-            YTBPQmFZcUk3QnpYSGh0THpQZGJvTGcKhMtghAUrEPQvPFnCpYsdz/nOeqE287iL
-            R5aRKFo7XO8YBm6xaV19GEne3G0rl3CoOlYrFmhljD3noJa/TMhtSQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXaUI4MjVBaVBRUlcyKzFo
+            VnZUc2RCbjF0YW16VkgvQUJnRkV2R2RqMFQwCmlaY0pWdlZPY1lISTJleCtjUzQx
+            cHkybmRjbmc0dTZ3SlJXUjlKWWJPUzQKLS0tIFlmckpmRUNtdE1VR1JKaHI1T2NY
+            Zkl5UWpUaG9vYzNvQzkxaGN0aTRLanMK2YHWM6mPJ/3dRtkBXpmR04lRLTLJkDij
+            gcGCT5OjcIwR1xa9GcxDSI9aW5zawB8nkWgoxWGSUzHw777BU27wog==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:bjU1TAcwuuaDoR2LE0TSlYhSpYt/EOGNVhft+XBs+4mKyN5oDsq00XBxp1jYwyDQfg7C3Gn2L83IJvsIyDbGwCniTxjQgVgUiPxsBb981LN8DwLW1frS6szypaWKiyg66bT2wB54eFyBLi8rcCFdsmYE/Pn6yoORPFg5mDceIfw=,iv:boh9wTRRFdlCTBNM8KFfyzGEiGEDk6VNTMu20dEYurE=,tag:Ej2IXYjb5TKxqbVn8tLRtg==,type:str]
+    lastmodified: "2023-03-03T00:57:56Z"
+    mac: ENC[AES256_GCM,data:iSijZuFCBCUyaitxMria8+hLSupWkFi8rjCiYyJSqGWgJ634bx6sXmsE4T8GQyyIEvv6NBamsH9mp6tLtz6HR22rdsWTmfLemTsAvh8UshAiIOR4I6qZGtNWC/Uhti4wE33HOGGoeVtSIk7sLMIUhwNeqNBELpadNgO6m3eIl6A=,iv:iZjnntFTBmuTT4g1rG/glk9Tq7ZiaSennMHDgN7g608=,tag:mpuLdRTKHs605xMcFJQTGA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
