--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:aVbntPPX,iv:nS7B3AIsfEmQ/vsHcKc3AIp+gsrm8EivYpAyViQuZ0k=,tag:nW5EWWhn2q6osLpLv0wHtw==,type:str]
-ansible_user: ENC[AES256_GCM,data:GdvLDImW,iv:aW9kSQNh9NEqAmrENUir77v9MDtt5VsaCnuMoe27Y6A=,tag:++ujhqQmoowWWjS+FUcDug==,type:str]
+kind: ENC[AES256_GCM,data:Y3FmkEq0,iv:+5gdIO73LFP+IdWjyob5UM8eIlOe0LO4IeY9c81UD5Q=,tag:Kl20VtFs1suAhPB5mV+leA==,type:str]
+ansible_user: ENC[AES256_GCM,data:1KE6oHXU,iv:B3I5hmXf1cnJ8HL2klXDTaWxVGf85vK6pCOKsdQ85so=,tag:gzB9F6NqmHxrVMCrWMUD+w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0aFFJMmU2VWpVU2srZGo5
-            dmwveVVKVnBuTGFLbzB2bVFiTFJMZy93aENrCmRzOTAweXNTY2pTTGxlY09oZ0Ra
-            QjVBMklWSTNWbnMyR2pLS1pCVWc0OVUKLS0tIEorTlJkYllWaDhQV09KTmpwUzg5
-            YldhUjJmZWNFTnpvUnFFejVOdDM0eGsK3WmwhHoIWIzfr4+LI7rUDJyuzjuPW90c
-            x4B7fNZEBf0in9GkuIdCyCfV06Prxnuf37QPmrk3wQ0ekkboyeEHvQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3S1oxT0ZOa1hrSHI0dFl3
+            WG1MbEh4a00xOGlkRno5SUc3NmFiOW9Kd1NzCmF2MUF1VG96TEdIVE5rQmZ3b2R2
+            S0s2V3J0UU9DR3l3N0NnZTU1Q3lPcW8KLS0tICtJYmxIM3NtK0tiNTRTVXdMaGhS
+            WWZtQWhBVHh1RWQzNTN4TXkvZE8rMVUKGlRNXRir4dEDZDJqsd6ioUP+gDRSNZW0
+            aonwtGnhqsEloMd+myl6awJK4l/j2Mq30iwCye3r3g5oOVU3Wv9RIw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:X1noja+j+B/R90/8NpKUHkugL61DhDNlKWx1j1m16a8sn+fVHjG3rbHOOJkChZBfg4EbUVj/rFKKHaqjmmAa7LZBuwPrI3t26xMNrxmbpGsAeXGhggWT+VTQSHjtzTmmzqL+QQo+F9na0lRABVzFxypXQti9ncr9LEZpH53mSss=,iv:VM1IZqJ8eM0ntSsDSXPU9mT2pRDgVWV86uUKhwp4XAE=,tag:9qQtcxa0N08CNHufQdJHHA==,type:str]
+    lastmodified: "2023-03-03T00:57:56Z"
+    mac: ENC[AES256_GCM,data:4JSA6dnXYOcqiXDimOF9Gchvb5xqgmzzfL9luHznh1VYS5ctbeij/puD8AkNJuvEXeztWb7jcxPKTCYdRs0DjmCtI8IuP4urwq3+G3mpK/vynr2AKjYFDUa4OU8+J0/RYcJ2Y1ISpnTJRHMYwXMWN3RzmesWO2h9E8BEe8dOs8w=,iv:3z+qrXkuNsdylKRYvhjhjGh8PMuTrhhlhXUdP8b5FoA=,tag:iZKkQkA+kOLYxvKH+4HHkw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
