--- a/ansible/inventory/kube/host_vars/k3s-09.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-09.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:bEizTqyA,iv:4kOLreHFKkfA/2pF3H9P8RE+oMY+F64WI43obifVpwQ=,tag:H0OJATEPlEVTOhXdVKoGTQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:jTpd1iHl,iv:Yq9FJYhZ61zKxijOQMgUePaqQOZwDNYSoSV0W2ophwQ=,tag:k1Y5Q3RcCfhtXeS2m6HXIw==,type:str]
+kind: ENC[AES256_GCM,data:v1fQpqJc,iv:NMZE7HIfHk38005qZAzVpvia60r686Y15YFm7L4uLKc=,tag:C11Zobs+Wft5tQukoEGofQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:DYSt7Juo,iv:94pi02HlrCYEIT7apmwzv6eNqUGYVp6nZhIGwz0kr1c=,tag:wXFI/DTS6a62r9Fq69qJUQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBucFhwSk8vMEZrZncrTFdL
-            Y2VRYU9sOGlKdEcxd0NYbWEyNkdnSHdlN3hRCm5wSHhoanUyWi83SG14NHNSL0Zx
-            SVFYUk5ncWJvRGI1YStxWnE1aXc3V28KLS0tIFh6Q1hCZGVLMkdGOUNGQ3MzaUNn
-            WXJ1RjliUU9ibWdLZ1V1NzFzdjhVU1EKOSCooRJ36aNmJTsdG0belc6j7wD2gjiz
-            e6z7JI0r85A6cuOflevQ4cPmiiQCeCZza23dxEhrwGwbLNkGy8Al1g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZdC9LRVF0RGFZMkYxT3dl
+            Tnc0ZnV5TWZDcDFNWVVSdGE1aG1HQWVyM0RNCnhMZmJiTVpJZjNxUjZ0VFlOUG9Y
+            MEpWRzRQa1N6cXI2ZTkwbUgyKy9jUmcKLS0tIEhlb0xjN2VJYkdSKytVSmVrek1n
+            dkxNT3FxRGdNS2RKZEZoMHZ6WTR5QVUKEiYwkBZC7UrV2EHBnWc/lSjJ7ldBkVDe
+            kaBpFisnGmft67hu2g0VMOZzWFh4BAc0Qkq8qPwuQ4gTYtxV9gcecA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:AJjy2YOocEJDA3EKWDbMF2DEmQ36g+LPUzVMhr+dDMucEoGC9FOgJzEDzGoU9slhK9MopuO3IqpGlBeCqE8Rcw8hZ5qrn3G30QECE+mTYpW6wv9ETg4rXlOEMxw7n9DLJDQeJ4vTeYHjlaD3CdbjeBSL6qy+AItptBbn68L0N3w=,iv:AVzYXkZMH3Jl8Vvjm1NpJnUVW1LIYj0W/LAHrmljlPc=,tag:0kf1/BLouvah5UNToC3INw==,type:str]
+    lastmodified: "2023-03-03T00:57:57Z"
+    mac: ENC[AES256_GCM,data:rczixb9Gz8JOESW0f+fFRNpvWEXpKeOujJ0BjqggqDtvWJ8aaqsBmb9hjLt1mvgMwKNtJ9W31uvDc61GEeFmbehnHCanZN8iz2Rwowv+cygkFy2YXUpZ/srkkgpFs3hzVIl916uZZkEsYtB3Wg7LcGkaCIsVNks38plhIIqPVDY=,iv:BhS1lEC3QAH7UyaaBON6wt38vCSytf3gzW3ZAadYQX4=,tag:sCtBZqWhgRhboo9PWHS4+g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
