--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:dJOIY91P84notKNhsGnRuuJNMa4M,iv:e4ypo1pfyly5UqFtNOghrhrh1TI1UBzycDp0WBawM6U=,tag:burQwadY/QgD80YakBbp/g==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:aarIPQS+6k5JcCB4QSEkcHPxEVE8gTdyAYN2qjoiwAZoMTKIpg==,iv:joOt3crm1UjC3xUbLsp2TOEGUpGHXezmd2aWWFtKHP8=,tag:xY6FTyHVRdN2CD7uuejOqg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:pnnk4VfdaEcb9cg=,iv:zrD0y7ha568L5RHpPfJBBswr+5xCc6aA4j7qn/Jl2P4=,tag:kh8yyrnuQaCvv290B6Zpkg==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:qXRUUjHEvFRQNZwx085lccO7sLpx,iv:Cou13LwJTXiVVQ7NulnCK1Xa98nSG6MXfJg+PH76dUs=,tag:0duahpfw6WgfxNLHGKsgeg==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:TDMhS7E5QRbiQ4qWeeYVCcqMR5L1V3VAsk8yJy2SOgpNoCPbVg==,iv:JAbhAUySZdeAVXMawxqYJcn0ub4kzv0Pux3MOsmb3hI=,tag:3/vtxtXTMP23cTkpHZ9S2w==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:CpaDjaJ3lru3aqw=,iv:X9MPx8G0Ucg2afF3ySdhnrS9bhLU/5mul3Jt+qxxHMA=,tag:hxTAdUcxAJ8BZh6zHqn7bg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6WW9NQW9zOVR4cWprL2V4
-            RWo3TG91SWNZZXQwVjlBUHRoU0pwTy9CdkgwCjVvc0krcG0xZnBOcVpHMjhEWUVK
-            ejNwYytSSHBZeWJ3dkEzYk9idlN1NVkKLS0tIDNMdm5pUHRqeW9aRzBoOFA5VDFa
-            eWFqYU56dDdjOStFcDBCTWVUdXJPMjgKJFko+9glDMBrYVLLvERWFci7ZHQCfoGt
-            KJzbRm3mQ7ROBKu9es/wxVUCObj1I1M0mEp149f2PYUmsQnTu4bhBg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzNEZRYy8rd1JSc2dkWFpF
+            clBTV3k3MDNEbWdNK0lycmNzU0ZoeWhCeEFrCnllRWg3NGRlVFNZazZBM0tGZG0r
+            TWp4UXpHQytIdGthclMzbUVRb1M2dmMKLS0tIHF2bk95OXdFZzZOWmd2b0RBRzBi
+            R3Z3ZzhLU28zS2FHcjRPM2ErT2ZkdUUKS4XjO3GG5A7mviVqvoIM/6VWpoxHY90x
+            FHeREMybAQp0XS2vO86xLsfTWPVy9BgTj1F+2sTTSy/CcbEA8XCNVA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:cY8w5Kgtt8KCCeYTvOT6LA02b9liw7fGZafGOlSncPt0xbF34CCLXBLG9mnBFCReXeZp0EEOcBzA1Oc/b7k6jC3lYwSZ7lDRwqPJ8fOCn4cfa4ATkoEZD8634Q5jnoyzjj43sjILoBBv/H9GZpFgUmu5uN0OmdUadYPGsLk8LMw=,iv:GvdphEv1mwBuKCtZ5oPClUTZOQYjmDQpGvPdgw0HlOc=,tag:7PGS3UxU8ZArg+ShlKy19g==,type:str]
+    lastmodified: "2023-03-03T00:57:56Z"
+    mac: ENC[AES256_GCM,data:0VxpjQTRLUck04sWOMaeoMV/CvsZkXziJv7qFuVOv0AdVLYuK9jwccIS34pqBnss8MY2T+BSPiDUg+99CjsE6u3y3jLjYz4AU4fkXTAGoXe+o/B23bFLYPx8EbjHzepALaWo1e8Jd8vRAqEQZgtor0VIGzaTHmmZnYcVnXzYfoc=,iv:r/NnLSJOEYJsFutbcSsEDdLaBH8YIskdr4DnxfVcBEA=,tag:LOKKnrlkuFgqZlLdM76FQQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
