--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,32 +4,32 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:BBN6s6cF7nsIZok=,iv:stUFx8oAs2LWFMrNgV1R1dgxOKIySm5s7ks9l3Pyv5g=,tag:KI0vnff6gR4L5wNmv3YvWQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:aFHiFmrc9t3OnMtTKUe7WP66VsdB,iv:+pDMglpJzpDPToa9D8zEzp1G18bQz2NMkcGVNK8Z+DU=,tag:d2GdKZWsn/WB1USGrJwFow==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:nfJ/hvh9olFrEXAiaKzeKBOLBaOre4akqMrgQDYTnT73p+awDL8OZO9W+LB0t5ZJCfcrFoxfwuGlmEtby/NHF52vRP+hex4=,iv:crdI78KEt+h/NvTwOEDlovRQbQJ4s9pOtllr3bqYk0E=,tag:OZBDSn22xVho+T9M1QzJ5Q==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:N9o34dzQjuSSXihk04RK7yJUcdWcFdTS7+uXxiWe69wK/XQ=,iv:Z7wSfNxL18I6GyNc+7SUcw8ObK5fk4M9DjWrr8y4d7M=,tag:l+zqAelJzYJ8W0afr06fqQ==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:97cvMjcvid0kyqp3CFuSLXDgCg==,iv:883z4DU7KmrfBeepWKXou+MEYQ/qkA0SRL7Mf4oGodU=,tag:EwzRxRUVLNy2I6SGNs5rmQ==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:3W00IUpZYJScLCxgxzQPOQmMrTiU,iv:X26ajaXV7/ssPREEEHFipx4ahQrLy5mBBUlWhoZNPP4=,tag:25dIH95nZ8mMl1/9O5TVmA==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:YAmwwASJo5c=,iv:MSWQaZeXZXaoZ+sf39+RK8njSY/eY3R1zibyCBoja0U=,tag:MF2I8C6tzPbUabrbpuuAZw==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:CApACCNODtY=,iv:9/s3L1casSu+ojwuDtyJuwRSNYhArhof36ujbR7VuSQ=,tag:72WLTmdjBIJyws5+Lix5wQ==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:HiTvTmFFRBWdngceRU6Bw0UfHy+M4MX0i3W2BeTNSbmWwKqUoB6RyugcvjEJx6WvAG5QETq/I8j2Iu3obeAU7Q==,iv:gcXfTRJwG35pv/H6vPQ3Um9bdS3uBbw064lFq7BHx9Q=,tag:LGoExwFmHdijuRlS+4x52g==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:Ecgus0jUKcUw0WfNVL2rkMRDK//MnyIw2lPfj0mB6PtcEYqjcsis7ItAHsXxewLlaEmxbK/JZMHlhVKqItC30w==,iv:NBmhpmIKvfaF9OFfaicFEKdHcJpwj7PzyQ4Wfr7/ISs=,tag:Zh6uFlxwmrWM4fl3tkv3Pg==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:LX/pI1easQy/,iv:Kd8R8oFXtjTWkSgV1eyyGDt87egYyFZ1MfEIqHVxHkE=,tag:LoGKowZHxfpf4QU+cU46lg==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:ODqmHbsHmPijw88Scugd,iv:JoqqA0Ty9xNNquegD5mgZW81aZAz92x8oKtYk8AblAI=,tag:guaHqItoFDm8UDyoCP+/LA==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:ZgQaZ1v8WpSfIS8kusBuJ9+WTJvFmI8v4+XRuRDCI3vIC2Il7XGF5PVGnpNiylCoLD0=,iv:j3a9/hsGjukOL/olq3dB1iZo6B75OFaOS1w9f9ZQRO4=,tag:/6kbgcxuaHHfwqHKhg/54Q==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:SPpwW9AtoGkTO1fkQYw=,iv:KrsfWIOSiRTRBT8yaUhOTHy2KGnzSORC4p8V4rzCsck=,tag:yI7z45+R1erR2X71b3TLzA==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:17Iu9YFJ5DvJOkiSIApBziiOwgc=,iv:tLdQXnVXjtdKrX/MWDS8V1gPEJL9O5+akgC8YHtiIR4=,tag:oveMTVV/3k1YgrE15xpn8A==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:l+ncM4cOD1w=,iv:IydsUj7gIPpMzbnz1ylzxObmalrhBnCTMi2FsYO8lyg=,tag:Yy1VJyVSxN6B23eZPkh7Lw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:pShRzGx3+hqX7eYRDfMtdOGNkTFn4lozWcQQe25f5ZdX0COG2A==,iv:IvBa/kBOAH7IOTBzswsvCKW+uK1xWNHS4pc0azSniZw=,tag:04PW/zj/hn/yN1es8DywIQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:orMXp2sztK/J,iv:JxdxGC+rfgFtlPByFCoASaaHuy4sraI3he95QCYw8QU=,tag:NAQnAiyu4mpCjmdF+yEdjw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:6PbWZF7ynXHA,iv:Lj+Cum6Apafk31eIM1pmM2OAe7h5dHY8/t4TOI2jwWY=,tag:C3FxYv20pTPWES9uzILu6w==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:IWNOi9aQRw==,iv:yUjfLY+zskZktCYeA8l7jMyeANTacI7YS2p1IgdiOqo=,tag:/n8pyv6P2MDqOmnWGLpcHw==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:BncgIQHqg7Py,iv:4tm9+wSYfjnZ/LgncMBPIIph7legjl8TeTQl4c7ArrA=,tag:4ud/IfEm/yGgffu+7y+Nrw==,type:str]
-    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:tA99MhLq6O1+2nnKy2DCVrOq,iv:+Q82iGXJH+wtzGAdkIuXENJbKvgrvpUx7qTFI33K8Yg=,tag:S5t542uV4gGDsV2+W9kUlg==,type:str]
-    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:aBIU+078NPcdWR2pKfMohex+3g==,iv:vtf0SofyiGMH+znDhlBv8TlTTW7lq90PhWGATs+QYMk=,tag:/vZqSmqu7e28Ttp5/OSdIQ==,type:str]
-    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:17qc0yHlI3U=,iv:nWHnc9JH+fuUrojjl79T0eY+frlCG6qsnjsHKs4jVaE=,tag:M1tVVfAr7qUplRSv57I7bg==,type:str]
-    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:S+o6yC3RhfiFGauo/5ZVEFQ30Q==,iv:G6Ftw/y1PFcQMf4CUq3tuilMGGr0avjTw8CXA5KEDms=,tag:hV4CmT1CP6gwsIVDkPRZDg==,type:str]
-    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:F10mCz5+6Wpa,iv:je2QMjS6ZGmrZ3vrlUHB7Pix5z3ZvcyTkvFue59pKPY=,tag:R+EGJENxRf/HD3lt+1Sa1A==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:twX9SRNJA6WWgA4=,iv:8UxQS26/GDRqTnCc1aaTQW6p4+r0OHLwdPGDvG1AZAg=,tag:TS4/g9vOYkWj+eIp7U39/w==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:eMWQrqTLesR2qqhsjzY7MQS4HE/C,iv:Jrp1ghRbuAaFatXyhsrWxoKLCCR51jl5dmxUX3bXGSs=,tag:JxW4BSi1+rHDdE3jra0eBw==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:/L+Vo0mHrVZ/6k0GI3v9r7+10SYY1KhSOEB7o5WwECptEwy+kvH/tWWt9W5FPxXPAr/bL0SGX5dRCUtr2XL1Yk6ZK+ezh20=,iv:zhx77tTOEUKmF4Xl8eRZA429WTmMUN9RPUSTiVGvvJY=,tag:oblEKRqBCD7NImI4fEFpsA==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:oW+fZxmjE6FdQnd5DHQxxzFSHMPljL68YE2HufQ+GN1ZNNw=,iv:hwWANjGLyzzYDJPx/rwcQ+v4fRk0rukWJE4riApj67w=,tag:aH2Y1lAlM6r5TS471TruBQ==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:g+rPpQx1MdNpAGPuJMre9sIrAw==,iv:Noi2IZpBkoYzflVBqQSAEQ34aGZ0+kXACuC9vFBVAR4=,tag:i+MB0XwWN+oQppNAjB9XWw==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:C1l/bMtzRRdH/79sPxP867/9PQ3/,iv:a+eAVecMfJMtTbKo0uG53P1UwIb4VmTVINnCiRYHO2I=,tag:xiuU76QjLVYXZqsDaWxYCg==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:1rSz/oVBu68=,iv:+X2vPAYAV56EFBoGpv5CE1hlKPYNbWIK8zwOTzEBhuA=,tag:ajpTGuaFGoaEYYltVtVrSw==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:sIonIyu2V4o=,iv:EFlWS7GzMmQN6Oqb4KJ5QPiXGiY+YnMrl0CbseWsZ0Y=,tag:bS2heRsZqKlRc4VAQrU4vA==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:V18YdJu7DbcWosA1L2kc5NcFGTWuiCeLi6dW9VfPFb0KXAURwHIKH6vcoIf3TpaxAsH8XomKE2hXHZ0YkxQyrQ==,iv:bIFuPWGmLcfmNwMYeqZpo5pcbOvhSS4whWRZWueOywU=,tag:X9zgXQJnMLLPofZt0LmxCA==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:02IGeJoHBRsFOU7JmP2jLN0TS39bH+K9Uj2vOmjYVLJnScU3ZqjUp6PMD1I2O8t0gfn2rixnRi2f1JrcNSwPXA==,iv:3Y0QWLdLYgmmMITeEMVyGElFgzf1QU8DztfGfgqq7Bk=,tag:Ib+cRTakjKI8J+Pi6My1LQ==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:lnp5B6Z28tZH,iv:towudJl+hYIYjdH+zK5gkE2obQ+vYnmZHGBWaP4+l60=,tag:2hWygGAtEHjL2riFOAB8EQ==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:f/ME4kef5Pwa48K743Ac,iv:/Q+zk5sWa73GgwExaIjlQBTL8dVwJQRPh5wQ7jliWyE=,tag:hMc30uk+JcvynQx9+1490g==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:IJtMhEek/O9TNGiJY22FkAKmz4USHY/GePJtxYkELVPLNdPupqcSkecdoY+iYI9mt38=,iv:Ghft1QIUED1zDsFtW39DhYBSAvgriU4BBf31LKuFHwQ=,tag:Ka+VIGM4Kej/iJD+467QVg==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:uLK3Orx3MCtOC5T2vqQ=,iv:414LmDmJ0YOySxrcWAiSM4G2dSktx+ifG1Ux8PgCAK0=,tag:RmaYSdsAtpW08GX3SbCUhw==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:SnfShBJfQARPWkgXPgJr8peBCvY=,iv:QNxToAlCDD+YNPpDCslDmw8Jb0FHLhFXJapTt6EM+4s=,tag:p+zznSaGNFnfBFsAXsWhAg==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:NuZTAQDrs4c=,iv:MER501VQRt3zR4zp9q2ottmIk8jsLc62oWJW7aX6ej0=,tag:I3/8VE4sDyHhhCOXFmsJig==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:S//QhkoUmjUEpUXJn0DSANTZLKSGuJEnEJhQKj0dPpq4zteXDQ==,iv:km6zu/In6voP4w3ibTER24hf6/d+E3R/qEi9JL9fIVg=,tag:lT0Vk/pvRnOfnyJrV8SfDA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:VRXDrMSTz/Lf,iv:ZS+871OhyC0IzTolzIJbhtRnQhUFZunHpQJoVnaKvmg=,tag:UHhKmOQmPRvR9m+EJTz81Q==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:LKS+8Iq/eijB,iv:qD+KjdOhfzUnhMWrFd3tfcSZUMU76G+Sc1/8UsGgkLA=,tag:+IXG6f/jeteWgKobvh4lXQ==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:3xlUD9KTTg==,iv:jBJ2pQ2tD5r1at07axcCJpcyKQAReRi31sMUbHlxn30=,tag:EvLyIkcCuIgs34J5egKkwg==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:xwamjvDTiW7N,iv:2AldRGJjaIPZvBDQ7fWXEV8vZ44azwCWcOcBAG4kfIo=,tag:7dMXwId/YUQZVawGOBuTpA==,type:str]
+    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:kD1Bhi6BT3PfgG0SsoVc1NAN,iv:wjsB71B5t0MMknE2hUmkfecPW8HyyI097oU52Tvqi7E=,tag:70O3FGYsJ84hnGGemiht5Q==,type:str]
+    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:tRXWoHGpTKiCEL+zbv5dLWXjnw==,iv:64/Y5klgesTP80k370y6nRHlGu8IYFIXfd3jvGFwsjA=,tag:qcaGRgK8Z1NXXfCqsk5/6A==,type:str]
+    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:mW+qRz/282Q=,iv:/2RYYe2R1T+/H3rSKer4Go/K7UykgzHjWHt0NQYOYfg=,tag:Flcw6xu5aKEvMvgnbIKtRw==,type:str]
+    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:oJ08p5I/EH0qrRKsCPSEEybd0A==,iv:z1PLGYNDjWHoUh2rZdVQOxKovNiYN81MnOGXWR028ow=,tag:cY0JfDmoH3lBXNwHWntbvw==,type:str]
+    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:jHHOenj02VOA,iv:othL8wMpywR+SUM87M6T4c8R6pUl2/u7G96OMEF0UQg=,tag:w8YaodbREIssFnCPrI6iJA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -39,14 +39,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDV3VTd0JPSzZaSkI3ZC9J
-            Y0ZJcVE4cU9kVFhwNUFsSE9HOXBFS2ZIQ2hzCjNzKzlQLzMya0doZkptNmxNTEpT
-            VU5ZSmNTNHpBMXYzcVVOTGo1ZnlMOEEKLS0tIDk2S1BHazZJK3JIbzBHc2gyVzVt
-            d0pDTHhWemhJMmRTdTdFaUF2LzF3ZTQKbRRJq1lQBFQQaLV0POD8F1WqQmED/aQB
-            53hOxZFzExTYW1fH1Zs1SNN2uuCfgRTaGOEWVNH9inl28nVpIX33bg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyMUxpL1l0dG5lc0t2OU9V
+            dURielkvbGhGanRSZHR5MFo3NzlQcXhXcmlBCnBNMnZ4cTlCVDF3STJSK1k5SmVJ
+            MCtRNjBvK3pkczAzMU1HYWFSd2lOVnMKLS0tIDZ0TVpDTVZoalBIZFN0QzhuZEtZ
+            R2lQWk5CdUwzNVRyOWE1UHp4U2VPSGcKw05fzZ4UgTbrbNWgc/tr1rSFncM4Uno7
+            BCIVXnaRPM8rhAbkiQVnHbrLQx2FpPW5KEy+H0yV7eakUfeTX2iVNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:+JgtPUb7lMkD/IHgTyJ3XoxGFZxUlQsbZ4tDb0oU9CFyEjHVpovqBfrQBf9CeyNAOve78zCTHwibP75G/2jekAn1G7SlQjBe774PgI2B0P0WRYJDZAG1PveQp0pYKzx4h0kPi3zbtYAlfm0/8wS0UrI5ATzL/daO7Smu0FX+Ljw=,iv:Cbdy6tbtHh4xVb5B7YCt75z6Qt1M6KgNQg24VuKWVic=,tag:8+xRhmZulrWaiq+wOs2Tuw==,type:str]
+    lastmodified: "2023-03-03T00:57:56Z"
+    mac: ENC[AES256_GCM,data:2BZrtpdlnuWx53IyucGUzqXLYknnTgEgu6/Ixnv2if18U/a9zYBbRG6Qhl5hHlt5hEXu1kOkz+hQWSJfPQ876O56rRQgTq7RAsCZLG/cekAY2ADwst9MOio7PaQ4olWQ2rhEoE296WKcLISIAKJBZoAvjokwT0uw6KO1P6yEEJ4=,iv:aKB3bCytI3qViZ7RuDy99K/r4p3RERpTQfeCUFLqXL0=,tag:Aw0GMSINcI0HdFRxVE3/Iw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
