--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:+/DDpa7J,iv:F4mhzK6Qgq/Qi9H7xJRPEWwPF29B+FL6Om3PYPozfW4=,tag:Bpo1JIznaDkzpSatmBn3Aw==,type:str]
-ansible_user: ENC[AES256_GCM,data:NsbDS6ap,iv:0oBtBY8z8crJaCMKpt7t5PA8kI5LwstJDgHXg2Xo1xQ=,tag:H1eksraZ8TVNsVXaXBZlPg==,type:str]
+kind: ENC[AES256_GCM,data:lMuCcuCc,iv:GtreiOYy5q1XPo3Z9ATBtXkUScePfDi/6PP+WqroBwY=,tag:UClXvjX4tJijuA1sGJhLbQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:YU5t0Lrd,iv:9rY4CsvED/y7AfogaR5MwYctYLIEDK8pa2UTx7f/Mz8=,tag:2Sc7QGbQMpPJuEHH0/ZWnA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQMkRzeEFmdUdGT0x2cUlw
-            WUZManBHRjU5ZGIrcEkyUVA5cFpTK2Q4UFY0CmVGR0hCRnkwUXk2b2lLN243N01w
-            MldqaHNpVXIzYUZFK21WMTFBelpmV0kKLS0tIC9mTnJXSGc0ZC8yNXRMTUxCcElR
-            TnRoa0o0dGVMYXQ4b0hFaTh4MUd2WlEKfg6T69DAHwtE92xZ4srLFTX/ltAyulwv
-            LaBXaL8McQj5/DNt0sE3C5TxGSmhVEJ0KwmSUtlU3RklOpc839K3Qw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkOVhsMVNDelJiQitZZ2R0
+            d3hlY1FZd2prNEpSRGtLa1R3S0I3bVlZc1JVClNhOUs5UDZTVWp0alo3dGlmcE9q
+            OWZrdmpyLzNlMU1TYmRkSnZlamhsdUkKLS0tIGFjR1J0SC9ROG1OTlcycTJXZlB0
+            eUx6SkFxL3Y0ZDg1VXpsalNlN0hKQ2MKlvxL3Rip/iu+HWV8fslSQz51l/Gltu5C
+            G7rXbxtoDDVHr0p7ZyTkbF3q1EFt3/gICzcwiPeccnblmtjxbfZGiA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:F/TUA2cNEodL5C/V2z9h0hRSYa1G7Q9tMOZIE+nctONEByDgthPNU3GQ4AYAOiDqKQwhe5mcgReAlDSQwuGBuWNEiBqYCWwVfx7UvWUze8irCEzqvh2XoxsIlQsiNCGXQVpqbvqnT6AigogUoxVrWEKdyTxihZqRvTi/+DGOdtI=,iv:N5XtN3GS/4/mKkeddVTKk5d6gqdz9fHdX07M0ilr7ts=,tag:dYPvDcjcMuOkOIT0RdBJsQ==,type:str]
+    lastmodified: "2023-03-03T00:57:56Z"
+    mac: ENC[AES256_GCM,data:86tcVnBDuMG5x8Wpie7LTzHkc6vxYYwssUa85tSDRH6nhSLSQLLYXIQHmcW3SbJLPSkvkna1cAXM3TuzBh+F1Dd7b1vETHmK7YhwhaTNA/bfVquPDKGy7w2RQ425WsLF+b41Egn01Ij9PGKNDqB9pZlh/slcYnugYnVOmOS4Jrg=,iv:5aVkiuEQMYRP+GmiRJIdhA4AGo8pEJNHbQ9vknEBwO0=,tag:Kb17ty5OvODpZM+SEAHkHw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
