--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:S91+eoY1,iv:BWyO26+Pmo8JTDwuqO6jgF7ZGItNf2ol2v5tHghgaDw=,tag:z5ddbZq3518kUiVAbsL1Ug==,type:str]
-ansible_user: ENC[AES256_GCM,data:t08uRp98,iv:25t948DJDRxVGQZa/frWjF7WmAMNUEwC189zptHOdOQ=,tag:mU8BatKSovRqvCFLvWGrwA==,type:str]
+kind: ENC[AES256_GCM,data:3q/EFxiV,iv:BRPswOoqRv224zI4hhuILLtxEX9uVOTHP+rmERihMVo=,tag:i9H+gA0WG2+FsVuOjb+ErQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:twfCTci5,iv:xEtukErjVy/jbk8O8RqWP02xAZ0QIj8AZ+Bmo8/JnG8=,tag:DlqDp1dD6uBAUFi3sA4wfA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnUUUvNXBDak90QTNUVGJ2
-            MmlFbWlPeHR6c2NwUlo1c3pqTFdRNnYyYTM0CmZocVlSQ0c4ejJqTnBtb1ZOWUts
-            WUJrb0plcERhTWgrVEc3cUovWWN1WlUKLS0tIGltUUFySjkwVEhNWXpIeXJqZ0Y4
-            N2t3VnkzTlRSSlowV0ZtWVowQkNVVk0KEEIjeRjyrcZmbt01IF2D0j3+bo5Jfds0
-            NjjNAtHO1tWxJQVZIxoYP/mouIydbA3dizaJFf881Z7xVuEdRI/lhQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5S2xUak04K2JrM0I4dEZ6
+            VnEzakxJcThrU0NGekswSXZITVpVNUV2K0RzCnNMTWNydklFTVpZd081Sk1PeTFl
+            cm4xbnVjTmFHbnNhNFBWM0d4NDh4cU0KLS0tIFVqVG4zQ1M0YkwvRUdWZG5QOXdk
+            aXB4c3dWQ2lzRjVsWCtqSnpJTW1SZWMKkdMPyKM3Y5Ml0ebsU6XasuOr5S56pyKJ
+            Z3QGwfa45YbmyQLSzvgmYgv+g8J92fnAmfQq7Q6+bAeeU3G8wTZ7jA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-03T00:44:42Z"
-    mac: ENC[AES256_GCM,data:Tfe/VlvKlOjJAFtGG6DYzCd7eXRQFM1VJhGMxD3Ul8jCJbngXQkK/n7Za2+SpEdWwe9G2eYaGL+iRqpHbtMq/yKvfx1TOQPsaFEJIWcR4cIyyOXwQNFGv5EQlymfdswXNuaiW96KuRu867RgUq77Pcq9nwuI7hnAjeF9gZFQHXg=,iv:/D8di+2a4mT98YHfEShn3BX9uZ4vofPiiifgW637LOk=,tag:z3uXr5xUCuQ0aWEkxBf7Aw==,type:str]
+    lastmodified: "2023-03-03T00:57:56Z"
+    mac: ENC[AES256_GCM,data:OH7kNjdliSsByAHfeWlBM2Alw3a22HQWyY0Qk/ucWcUq55wp0EsqWDtbFQZ2JoUsVB9JOKUPIzIbuqRDMoh37Et5JCvmS8zDnSW25oNigGV6x9GAgcOsKaU/cpSlq+JIhBkN0O2eldtsvbo6wLdzhDaCs2QBJ1/mfp6H+hhsurc=,iv:W+dhwvLMU77Lx9xztrgVLvYTsK9ZXySJ9a9GA/X0jO4=,tag:J63rXsWpbnApTUNFyxzcNA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
