--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./influxdb/ks.yaml
   - ./vpa/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
-  - ./grafana/ks.yaml
+  # - ./grafana/ks.yaml
   - ./helm-dashboard/ks.yaml
   # - ./loki/ks.yaml
   # - ./vector/ks.yaml
