--- a/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
@@ -2,14 +2,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: minio
+  name: &app minio
   namespace: kube-system
 spec:
   interval: 15m
   chart:
     spec:
       chart: app-template
-      version: 0.2.2
+      version: 1.3.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -31,6 +31,8 @@ spec:
       MINIO_BROWSER_REDIRECT_URL: "https://minio.${SECRET_DOMAIN}"
       MINIO_SERVER_URL: "https://s3.${SECRET_DOMAIN}"
     envFrom:
+    ## sops --encrypt --in-place ./kubernetes/apps/kube-system/minio/app/minio.sops.yaml
+    ## sops --decrypt ./kubernetes/apps/kube-system/minio/app/minio.sops.yaml | kubectl apply -f -
       - secretRef:
           name: *app
     args: ["server", "/data", "--console-address", ":9001"]
