--- a/kubernetes/apps/kube-system/minio/app/storage-class.yaml
+++ b/kubernetes/apps/kube-system/minio/app/storage-class.yaml
@@ -1,53 +1,33 @@
-# Remove default storage class:
-# kubectl patch storageclass local-path -p '{"metadata": {"annotations":{"storageclass.kubernetes.io/is-default-class":"false"}}}'
-# Set as default storage class:
-# kubectl patch storageclass appdata-nfs -p '{"metadata": {"annotations":{"storageclass.kubernetes.io/is-default-class":"true"}}}'
 ---
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
+apiVersion: v1
+kind: PersistentVolume
 metadata:
-  name: nfs-fast-tank
-provisioner: nfs.csi.k8s.io
-parameters:
-  server: "192.168.1.2"
-  share: "/volume1/network-storage"
-reclaimPolicy: Delete
-volumeBindingMode: Immediate
-mountOptions:
-  - nfsvers=4.2
-  - nconnect=16
-  - hard
-  - noatime
-
+  name: minio-nfs
+spec:
+  capacity:
+    storage: 1Mi
+  accessModes:
+    - ReadWriteMany
+  storageClassName: minio-nfs
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: "osiris.${SECRET_PRIVATE_DOMAIN}"
+    path: /pluto/apps/minio
+  mountOptions:
+    - nfsvers=4.2
+    - nconnect=8
+    - hard
+    - noatime
 ---
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
+apiVersion: v1
+kind: PersistentVolumeClaim
 metadata:
-  name: nfs-slow
-provisioner: nfs.csi.k8s.io
-parameters:
-  server: expanse.turbo.ac
-  share: /eros/Apps/PVCs
-reclaimPolicy: Delete
-volumeBindingMode: Immediate
-mountOptions:
-  - nfsvers=4.2
-  - nconnect=8
-  - hard
-  - noatime
----
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: nfs-fast
-provisioner: nfs.csi.k8s.io
-parameters:
-  server: expanse.turbo.ac
-  share: /share/PVCs
-reclaimPolicy: Delete
-volumeBindingMode: Immediate
-mountOptions:
-  - nfsvers=4.2
-  - nconnect=8
-  - hard
-  - noatime
+  name: minio-nfs
+  namespace: storage
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: minio-nfs
+  resources:
+    requests:
+      storage: 1Mi
