--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -10,6 +10,6 @@ resources:
   - ./reloader/ks.yaml
   - ./nfs-subdir-external-provisioner/ks.yaml
   - ./local-path-provisioner/ks.yaml
-  - ./portainer/ks.yaml
+  # - ./portainer/ks.yaml
   - ./storage/ks.yaml
   - ./minio/ks.yaml
