--- a/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
@@ -65,6 +65,8 @@ spec:
           external-dns.home.arpa/enabled: "true"
           external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
           external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN}
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+
         hosts:
           - host: &host-console "minio.${SECRET_DOMAIN}"
             paths:
