--- a/kubernetes/apps/kube-system/minio/app/ingress.yaml
+++ b/kubernetes/apps/kube-system/minio/app/ingress.yaml
@@ -1,41 +1,40 @@
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx-site
-  namespace: default
+  name: minio
+  namespace: kube-system
   annotations:
     hajimari.io/enable: "true"
     external-dns.home.arpa/enabled: "true"
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-    external-dns.alpha.kubernetes.io/hostname: www.${SECRET_DOMAIN}
+    external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN}
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
 spec:
   ingressClassName: "traefik"
   tls:
     - hosts:
-        - "${SECRET_DOMAIN}"
-        - "www.${SECRET_DOMAIN}"
-      secretName: "web-tls"
+        - "minio.${SECRET_DOMAIN}"
+        - "s3.${SECRET_DOMAIN}"
+      secretName: "minio-tls"
   rules:
-    - host: "${SECRET_DOMAIN}"
+    - host: "minio.${SECRET_DOMAIN}"
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: nginx-site
+                name: minio
                 port:
-                  number: 8080
-    - host: "www.${SECRET_DOMAIN}"
+                  number: 9002
+    - host: "s3.${SECRET_DOMAIN}"
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: nginx-site
+                name: s3
                 port:
-                  number: 8080
+                  number: 9003
