--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -12,4 +12,4 @@ resources:
   - ./local-path-provisioner/ks.yaml
   # - ./portainer/ks.yaml
   - ./storage/ks.yaml
-  # - ./minio/ks.yaml
+  - ./minio/ks.yaml
