--- a/kubernetes/apps/kube-system/minio/app/ingress.yaml
+++ b/kubernetes/apps/kube-system/minio/app/ingress.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -15,7 +16,6 @@ spec:
   tls:
     - hosts:
         - "minio.${SECRET_DOMAIN}"
-        - "s3.${SECRET_DOMAIN}"
       secretName: "minio-tls"
   rules:
     - host: "minio.${SECRET_DOMAIN}"
@@ -27,7 +27,27 @@ spec:
               service:
                 name: minio
                 port:
-                  number: 9002
+                  number: 9001
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: minio
+  namespace: kube-system
+  annotations:
+    hajimari.io/enable: "true"
+    external-dns.home.arpa/enabled: "true"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/hostname: s3.${SECRET_DOMAIN}
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+spec:
+  ingressClassName: "traefik"
+  tls:
+    - hosts:
+        - "s3.${SECRET_DOMAIN}"
+      secretName: "s3-tls"
+  rules:
     - host: "s3.${SECRET_DOMAIN}"
       http:
         paths:
@@ -37,4 +57,4 @@ spec:
               service:
                 name: s3
                 port:
-                  number: 9003
+                  number: 9000
