--- a/kubernetes/apps/kube-system/minio/app/ingress.yaml
+++ b/kubernetes/apps/kube-system/minio/app/ingress.yaml
@@ -32,7 +32,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: minio
+  name: minio-s3
   namespace: kube-system
   annotations:
     hajimari.io/enable: "true"
