--- a/kubernetes/apps/kube-system/minio/app/ingress.yaml
+++ b/kubernetes/apps/kube-system/minio/app/ingress.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -8,7 +7,7 @@ metadata:
     hajimari.io/enable: "true"
     external-dns.home.arpa/enabled: "true"
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-    external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN}
+    external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN},"s3.${SECRET_DOMAIN}"
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
 spec:
@@ -16,6 +15,7 @@ spec:
   tls:
     - hosts:
         - "minio.${SECRET_DOMAIN}"
+        - "s3.${SECRET_DOMAIN}"
       secretName: "minio-tls"
   rules:
     - host: "minio.${SECRET_DOMAIN}"
@@ -28,26 +28,6 @@ spec:
                 name: minio
                 port:
                   number: 9001
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: minio-s3
-  namespace: kube-system
-  annotations:
-    hajimari.io/enable: "true"
-    external-dns.home.arpa/enabled: "true"
-    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-    external-dns.alpha.kubernetes.io/hostname: s3.${SECRET_DOMAIN}
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
-    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-spec:
-  ingressClassName: "traefik"
-  tls:
-    - hosts:
-        - "s3.${SECRET_DOMAIN}"
-      secretName: "s3-tls"
-  rules:
     - host: "s3.${SECRET_DOMAIN}"
       http:
         paths:
@@ -58,3 +38,64 @@ spec:
                 name: s3
                 port:
                   number: 9000
+
+# ---
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: minio
+#   namespace: kube-system
+#   annotations:
+#     hajimari.io/enable: "true"
+#     external-dns.home.arpa/enabled: "true"
+#     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+#     external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN}
+#     cert-manager.io/cluster-issuer: "letsencrypt-production"
+#     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+# spec:
+#   ingressClassName: "traefik"
+#   tls:
+#     - hosts:
+#         - "minio.${SECRET_DOMAIN}"
+#       secretName: "minio-tls"
+#   rules:
+#     - host: "minio.${SECRET_DOMAIN}"
+#       http:
+#         paths:
+#           - path: /
+#             pathType: Prefix
+#             backend:
+#               service:
+#                 name: minio
+#                 port:
+#                   number: 9001
+# ---
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: minio-s3
+#   namespace: kube-system
+#   annotations:
+#     hajimari.io/enable: "true"
+#     external-dns.home.arpa/enabled: "true"
+#     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+#     external-dns.alpha.kubernetes.io/hostname: s3.${SECRET_DOMAIN}
+#     cert-manager.io/cluster-issuer: "letsencrypt-production"
+#     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+# spec:
+#   ingressClassName: "traefik"
+#   tls:
+#     - hosts:
+#         - "s3.${SECRET_DOMAIN}"
+#       secretName: "s3-tls"
+#   rules:
+#     - host: "s3.${SECRET_DOMAIN}"
+#       http:
+#         paths:
+#           - path: /
+#             pathType: Prefix
+#             backend:
+#               service:
+#                 name: s3
+#                 port:
+#                   number: 9000
