--- a/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
@@ -24,7 +24,8 @@ spec:
   values:
     image:
       repository: quay.io/minio/minio
-      tag: RELEASE.2023-02-27T18-10-45Z
+      # tag: RELEASE.2023-02-27T18-10-45Z
+      tag: RELEASE.2022-12-07T00-56-37Z
     env:
       TZ: "${TIMEZONE}"
       MINIO_UPDATE: "off"
