--- a/kubernetes/apps/networking/traefik/add-ons/external-services/minio.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/minio.yaml
@@ -5,9 +5,9 @@ metadata:
   name: minio
   namespace: networking
   annotations:
-    # external-dns.home.arpa/enabled: "true"
-    # external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-    # external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN},"s3.${SECRET_DOMAIN}"
+    external-dns.home.arpa/enabled: "true"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN},"s3.${SECRET_DOMAIN}"
     hajimari.io/enable: "true"
     hajimari.io/icon: simple-icons:proxmox
     coredns.io/hostname: "minio.${SECRET_DOMAIN}"
