minio ingress down

--- a/kubernetes/apps/networking/traefik/add-ons/external-services/kustomization.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 namespace: networking
 resources:
   - proxmox.yaml
-  # - minio.yaml
+  - minio.yaml
   - diskstation.yaml
   #- plex.yaml
