--- a/kubernetes/apps/networking/traefik/add-ons/external-services/minio.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/minio.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     external-dns.home.arpa/enabled: "true"
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-    external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN}
+    external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN}, s3.${SECRET_DOMAIN}
     #external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
     hajimari.io/enable: "true"
     hajimari.io/icon: simple-icons:proxmox
@@ -18,7 +18,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - host: &host "minio.${SECRET_DOMAIN}"
+    - host: "minio.${SECRET_DOMAIN}"
       http:
         paths:
           - backend:
@@ -28,30 +28,48 @@ spec:
                   number: 9001
             path: /
             pathType: Prefix
+    - host: "s3.${SECRET_DOMAIN}"
+      http:
+        paths:
+          - backend:
+              service:
+                name: minio
+                port:
+                  number: 9000
+            path: /
+            pathType: Prefix
   tls:
     - hosts:
-        - "minio.${SECRET_DOMAIN}"
+        - minio.${SECRET_DOMAIN}
+        - s3.${SECRET_DOMAIN}
       secretName: "minio-${SECRET_DOMAIN/./-}-tls"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: minio
+  namespace: networking
 spec:
   ports:
-    - name: http
+    - name: web
       protocol: TCP
       port: 9001
-      targetPort: 9001
+    - name: api
+      protocol: TCP
+      port: 9000
 ---
 apiVersion: v1
 kind: Endpoints
 metadata:
   name: minio
+  namespace: networking
 subsets:
   - addresses:
       - ip: 192.168.1.2
     ports:
-      - name: http
+      - name: web
         port: 9001
+        protocol: TCP
+      - name: api
+        port: 9000
         protocol: TCP
