--- a/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
@@ -25,12 +25,14 @@ spec:
     image:
       repository: quay.io/minio/minio
       # tag: RELEASE.2023-02-27T18-10-45Z
-      tag: RELEASE.2022-12-07T00-56-37Z
+      tag: RELEASE.2022-09-07T22-25-02Z
     env:
       TZ: "${TIMEZONE}"
       MINIO_UPDATE: "off"
       MINIO_BROWSER_REDIRECT_URL: "https://minio.${SECRET_DOMAIN}"
       MINIO_SERVER_URL: "https://s3.${SECRET_DOMAIN}"
+      MINIO_PROMETHEUS_URL: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
+      MINIO_PROMETHEUS_JOB_ID: minio
     envFrom:
     ## sops --encrypt --in-place ./kubernetes/apps/kube-system/minio/app/minio.sops.yaml
     ## sops --decrypt ./kubernetes/apps/kube-system/minio/app/minio.sops.yaml | kubectl apply -f -
@@ -46,8 +48,17 @@ spec:
           api:
             enabled: true
             port: &port-api 9000
-        monitor:
-          enabled: false
+        # monitor:
+        #   enabled: false
+    serviceMonitor:
+      main:
+        enabled: true
+        endpoints:
+          - port: api
+            scheme: http
+            path: /minio/v2/metrics/cluster
+            interval: 1m
+            scrapeTimeout: 10s
           # endpoints:
           #   - port: api
           #     scheme: http
