--- a/kubernetes/apps/kube-system/minio/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/minio/app/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./helmrelease.yaml
   - ./ingress.yaml
   - ./minio.sops.yaml
-  - ./service-monitor.yaml
+  # - ./service-monitor.yaml
