--- a/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
@@ -33,11 +33,11 @@ spec:
       MINIO_SERVER_URL: "https://s3.${SECRET_DOMAIN}"
       MINIO_PROMETHEUS_URL: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
       MINIO_PROMETHEUS_JOB_ID: minio
-    envFrom:
-    ## sops --encrypt --in-place ./kubernetes/apps/kube-system/minio/app/minio.sops.yaml
-    ## sops --decrypt ./kubernetes/apps/kube-system/minio/app/minio.sops.yaml | kubectl apply -f -
-      - secretRef:
-          name: *app
+    # envFrom:
+    # ## sops --encrypt --in-place ./kubernetes/apps/kube-system/minio/app/minio.sops.yaml
+    # ## sops --decrypt ./kubernetes/apps/kube-system/minio/app/minio.sops.yaml | kubectl apply -f -
+    #   - secretRef:
+    #       name: *app
     args: ["server", "/data", "--console-address", ":9001"]
     service:
       main:
