--- a/kubernetes/apps/kube-system/minio/app/ingress.yaml
+++ b/kubernetes/apps/kube-system/minio/app/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     # traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-default@kubernetescrd
-    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
+    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
 spec:
   ingressClassName: "traefik"
   tls:
